# SlopMachine

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  llms.txt  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/slop/: SKILL.md
.claude/skills/slop-models/: SKILL.md
.claude/skills/slop-update/: SKILL.md
.claude/skills/slop/.claude-plugin/: plugin.json
.claude/skills/slop/references/: dance.md  image.md  models.md
.claude/skills/slop/scripts/: bootstrap.ps1  bootstrap.sh
config/: models.yaml
config/styles/: anime.yaml  casino.yaml  cyberpunk.yaml
docs/: PERIODIC-UPDATE.md
src/slopmachine/: __init__.py  cli.py  config.py  hardware.py  registry.py  runner.py
src/slopmachine/config/: assets.yaml  models.yaml
src/slopmachine/pipeline/: __init__.py  animation.py  backends.py  base.py  image.py  pose.py
tests/: test_animation.py  test_cli_helpers.py  test_config_styles.py  test_hardware.py  test_image.py  test_providers.py  test_registry.py
