[project]
name = "slopmachine"
version = "0.1.0"
description = "Modular, CLI-driven local generative-AI toolkit (image/video/animation/music) for NVIDIA Blackwell GPUs."
readme = "README.md"
authors = [
    { name = "Nadav", email = "nadavc2c@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "diffusers>=0.38.0",
    "huggingface-hub>=1.20.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "safetensors>=0.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.12.1",
    "typer>=0.25.1",
]

[project.optional-dependencies]
# AI-dance ("pose-skeleton extraction -> motion transfer") preprocessing + video I/O.
# Opt-in only: `uv sync --extra dance`. Kept lean and OFFICIAL:
#  - CPU onnxruntime on purpose (the -gpu wheel lacks Blackwell sm_120 kernels;
#    pose extraction on a short clip is light, and the heavy diffusion runs on torch cu128).
#  - opencv-python-headless = no GUI deps for a CLI tool.
#  - matplotlib + onnxruntime are what the vendored official Wan-Animate pose preprocessing needs
#    (see src/slopmachine/vendor/wan_animate_preprocess/). imageio[-ffmpeg] writes the mp4s.
# 16GB-VRAM fitting still uses STOCK torch/diffusers (offload + fp8 + VAE tiling); no quant libs here.
dance = [
    "opencv-python-headless>=4.13.0",
    "onnxruntime>=1.27.0",
    "matplotlib>=3.9.0",
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.6.0",
    "ftfy>=6.2.0",          # diffusers' WanAnimatePipeline uses ftfy.fix_text for prompt cleanup
]
# Token-based REMOTE image providers (opt-in: `uv sync --extra cloud`). OFF by default and gated by
# SLOP_ALLOW_CLOUD, so they never spend money unless the user explicitly opts in. `huggingface_hub`
# (HF Inference) is already in core; this adds Google's Gen AI SDK.
cloud = [
    "google-genai>=1.0.0",
]

[project.scripts]
slop = "slopmachine.cli:app"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

# PyTorch must come from NVIDIA's CUDA wheel index, not PyPI (PyPI's Windows torch
# is CPU-only). cu128 has Blackwell sm_120 + Windows cp312 wheels. Bump to a newer
# cuXXX index here if/when we want a newer CUDA build.
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
